# Emulator-Code

./: README.md
IoTivity-lite/: build2.sh  gen2.sh
IoTivity-lite/dimlight/: devbuildmake  dimlight-config.json  dimlight-gen-merge.c  dimlight-gen.c  dimlight-main.c  dimlight-new.c  dimlight.c  setup.sh
IoTivity-lite/vscode-dimlight/: .gitignore  CMakeLists.txt  devbuildmake  setup.sh  vscode-dimlight-config.json
IoTivity-lite/vscode-dimlight/main/: vscode-dimlight-main.c  vscode-dimlight.c
IoTivity/dimlight/: dimlight-config.json  setup.sh
emulator/: install.sh
emulator/dimlight/: dimlight-config.json  dimlight.json
emulator/dimlight/glade/: window_main.glade~  window_main_old.glade
